--- a/templates/content.html
+++ b/templates/content.html
@@ -30,7 +30,7 @@
 
 {% macro projects() %}
 <div class="user-details">
-  <h1> Featured Projects </h1>
+  <h1> Projects </h1>
 <!-- </div>
 <div class="user-projects">
   <div class="images-right">
