--- a/templates/macros.html
+++ b/templates/macros.html
@@ -12,15 +12,6 @@
 </head>
 {% endmacro head %}
 
-{% macro footer() %}
-<footer class="footer">
-    <p>&copy; {{ config.extra.username }}</p>
-</footer>
-<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="{{ config.base_url ~ "/js/sweet-scroll.min.js" }}"></script>
-<script src="{{ config.base_url ~ "/js/main.js" }}"></script>
-{% endmacro footer %}
-
 {% macro header() %}
 <div id="particles-js">
   <div class="header">
@@ -29,8 +20,8 @@
         <span class="site-description">{{ config.extra.user_title | linebreaksbr | safe }}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Send email" href="mailto:lukas.m.mesicek@gmail.com"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="My Github" target="_blank" href="https://github.com/lukazmm"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
@@ -40,6 +31,15 @@
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
 </div>
 {% endmacro header %}
+
+{% macro footer() %}
+<footer class="footer">
+    <p>&copy; {{ config.extra.username }}</p>
+</footer>
+<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="{{ config.base_url ~ "/js/sweet-scroll.min.js" }}"></script>
+<script src="{{ config.base_url ~ "/js/main.js" }}"></script>
+{% endmacro footer %}
 
 {% macro google_analytics() %}
 <!-- Google Analytics -->
