--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% import "macros.html" as macros %}
-{% import "content.html" as content %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,12 +10,69 @@
       {{ macros::header() }}
 
       <section id="about">
-        {{ content::about() }}
+        <div class="user-details">
+          <h1> About Me </h1>
+          <p> I am an undergraduate student majoring in Physics and Mathematics at the University of Utah. 
+            Currently, I study critical phenomena in the collapse of black holes using Numerical Relativity. 
+          </p>
+        </div>
+        <!-- <div class="user">
+    <div class="tech">
+      <h2>Design</h2>
+      <i class="devicon-html5-plain-wordmark"></i>
+      <i class="devicon-bootstrap-plain-wordmark colored"></i>
+      <i class="devicon-sass-original colored"></i>
+      <p></p>
+    </div>
+    <div class="tech">
+      <h2>Code</h2>
+      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-react-original-wordmark colored"></i>
+      <i class="devicon-nodejs-plain-wordmark"></i>
+      <p></p>
+    </div>
+    <div class="tech">
+      <h2>Tools</h2>
+      <i class="devicon-git-plain"></i>
+      <i class="devicon-gulp-plain colored"></i>
+      <i class="devicon-atom-original-wordmark"></i>
+      <p></p>
+    </div>
+</div> -->
       </section>
 
       <section id="projects">
-        {{ content::projects() }}
+        <div class="user-details">
+          <h1> Projects </h1>
+        </div>
+        <!-- <div class="user-projects">
+          <div class="images-right">
+            <img alt="mountains" src="{{ config.base_url ~ "/img/mountains.jpg" }}" />
+          </div>
+          <div class="contents">
+            <h3> Project Title </h3>
+            <ul>
+              <li> Featured Skills</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <a class="project-link" href="#">Check it out</a>
+          </div>
+        </div>
+        <div class="user-projects">
+          <div class="images-left">
+            <img alt="mountains" src="{{ config.base_url ~ "/img/skate.jpg" }}" />
+          </div>
+          <div class="contents-right">
+            <h3> Project Title </h3>
+            <ul>
+              <li> Featured Skills</li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <a class="project-link" href="#">Check it out</a>
+          </div>
+        </div> -->
       </section>
+
 
       {% block content %}
       <p></p>
@@ -24,6 +80,6 @@
 
 
       {{ macros::footer() }}
-      {{ macros::google_analytics() }}
+      {# macros::google_analytics() #}
 
   </body>
