--- a/templates/macros.html
+++ b/templates/macros.html
@@ -16,12 +16,12 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{ config.extra.username }}</span>
+        <span class="site-title">{{ config.extra.user_name }}</span>
         <span class="site-description">{{ config.extra.user_title | linebreaksbr | safe }}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:lukas.m.mesicek@gmail.com"><i class="icon fa fa-envelope"></i></a>
-        <a aria-label="My Github" target="_blank" href="https://github.com/lukazmm"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Send email" href={{ "mailto:" ~ config.extra.email }}><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="My Github" target="_blank" href={{ "https://github.com/" ~ config.extra.github}}><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
@@ -34,7 +34,7 @@
 
 {% macro footer() %}
 <footer class="footer">
-    <p>&copy; {{ config.extra.username }}</p>
+    <p>&copy; {{ config.extra.user_name }}</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ config.base_url ~ "/js/sweet-scroll.min.js" }}"></script>
