--- a/templates/index.html
+++ b/templates/index.html
@@ -45,20 +45,24 @@
         <div class="user-details">
           <h1> Projects </h1>
         </div>
-        <!-- <div class="user-projects">
+        <div class="user-projects">
           <div class="images-right">
-            <img alt="mountains" src="{{ config.base_url ~ "/img/mountains.jpg" }}" />
+            <img alt="toymodel" src="{{ config.base_url ~ "/img/toymodel.png" }}" />
           </div>
           <div class="contents">
-            <h3> Project Title </h3>
-            <ul>
+            <h3> Black Hole Simulations using the Finite Difference Method </h3>
+            <!-- <ul>
               <li> Featured Skills</li>
-            </ul>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </ul> -->
+            <p>My current research investigates the behaviour of critical black hole collapse using numerical methods. 
+              In spherical symmetry critical collapse reveals a suprising degree of structure, and appears to contradict 
+              the principle of cosmic censorship. I am studying such collapse in axisymmetry to help determine how such critical
+              phenomena changes in higher dimensional systems.
+            </p>
             <a class="project-link" href="#">Check it out</a>
           </div>
         </div>
-        <div class="user-projects">
+        <!-- <div class="user-projects">
           <div class="images-left">
             <img alt="mountains" src="{{ config.base_url ~ "/img/skate.jpg" }}" />
           </div>
